--- a/.github/workflows/scope.yml
+++ b/.github/workflows/scope.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   build:
-    name: Build
+    name: Test
     runs-on: ubuntu-latest
     steps:
 
@@ -28,5 +28,5 @@ jobs:
             dep ensure
         fi
 
-    - name: Build
-      run: go test -v ./..
+    - name: Test
+      run: go test -v ./...
